# concac3cm

./: .gitattributes  .gitignore  README.md
Year 1/QUARTER 2/programming 2/test exam/: CMakeLists.txt  assignment1.c  assignment2.c  assignment3.c  assignment4.c  assignment5.c  assignment6.c  grades.c  students.c  students.h  students.txt  studentss.c
Year 1/QUARTER 2/programming 2/week 3/: CMakeLists.txt  tutorial-3.html  tutorial-3.md
Year 1/QUARTER 2/programming 2/week 3/activity1/: main.c
Year 1/QUARTER 2/programming 2/week 3/activity2/: CMakeLists.txt  main.c
Year 1/QUARTER 2/programming 2/week 3/activity3/: CMakeLists.txt  main.c
Year 1/QUARTER 2/programming 2/week 3/activity4/: CMakeLists.txt  main.c
Year 1/QUARTER 2/programming 2/week 3/activity5/: CMakeLists.txt  main.c
Year 1/QUARTER 2/programming 2/week 3/activity6/: CMakeLists.txt  main.c
Year 1/QUARTER 2/programming 2/week 3/activity7/: CMakeLists.txt  main.c
Year 1/QUARTER 2/programming 2/week 3/assignments/: assignments.html  assignments.md
Year 1/QUARTER 2/programming 2/week 3/functions/: morefunctions.c
Year 1/QUARTER 2/programming 2/week 4/tutorial/: CMakeLists.txt  activity1.c  activity2.c  activity3.c  activity4.c  activity5.c  activity6.c  activity7.c  activity8.c  program  tutorial-4.html  tutorial-4.md
Year 1/QUARTER 2/programming 2/week 5/assignments/: CMakeLists.txt  assignments.html  assignments.md
Year 1/QUARTER 2/programming 2/week 6/tutorial/: CMakeLists.txt  act2-not-fixed.c  activity1.c  activity2.c  activity3.c  activity4.c  activity5.c  activity6.c  tutorial-6.html  tutorial-6.md
Year 1/QUARTER 2/programming 2/week 7/assignments/: CMakeLists.txt  assignments.html  assignments.md  pooh.txt
Year 1/QUARTER 2/programming 2/week 7/tutorial/: CMakeLists.txt  activity1.c  activity2.c  activity3.c  activity4.c  activity5.c  activity6.c  numbers.txt  tutorial-7.html  tutorial-7.md
Year 1/QUARTER 3/C++ Foundations/week 1/demo_week_01/: CMakeLists.txt  a.out  cc.cpp  cccccc.cpp  input.txt  labs.cpp  labsc2.cpp  main.cpp  main_2024.cpp  spacy.clean  spacy.txt  text_cleaner  text_cleaner.cpp  text_cleanerchuasua.cpp  text_cleanerdeepseek.cpp  week1.html  week1.md
Year 1/QUARTER 3/C++ Foundations/week 2/demo_week_02/: CMakeLists.txt  grepper.cpp  grepper.h  main.cpp  options.cpp  options.h
Year 1/QUARTER 3/C++ Foundations/week 3/demo_week_03/: CMakeLists.txt  date.cpp  date.h  main.cpp  utils.h
Year 1/QUARTER 3/C++ Foundations/week 3/workshops/: CMakeLists.txt  main.cpp  rational.cpp  rational.h  rational_calc.cpp  rational_calc.h  week3_workshops.md
Year 1/QUARTER 3/C++ Foundations/week 4/workshop_04/: CMakeLists.txt  counter.cpp  counter.h  file_counts.cpp  file_counts.h  main.cpp  options.cpp  options.h  week4_workshops.html  week4_workshops.md
Year 1/QUARTER 3/C++ Foundations/week 6/demo_week_06/: CMakeLists.txt  dictionary.cpp  dictionary.h  main.cpp  words.txt
Year 1/QUARTER 3/C++ Foundations/week 7/labs_07/: CMakeLists.txt  main.cpp  num_vector.cpp  num_vector.h
Year 1/QUARTER 3/C++ Foundations/week 7/workshops_07/: CMakeLists.txt  main.cpp  rational.cpp  rational.h
Year 1/QUARTER 3/Computer Networking/pico/project-template/: CMakeLists.txt  credentials.h  lwipopts.h  main.c  setupWifi.h
Year 2/Quarter 1/Algorithm/sample-exam-code/: CMakeLists.txt  README.md
Year 2/Quarter 1/Algorithm/sample-exam-code/assignment1/: CMakeLists.txt  main.cpp  testing.md
Year 2/Quarter 1/Algorithm/sample-exam-code/assignment2/: CMakeLists.txt  main.cpp  testing.md
Year 2/Quarter 1/Algorithm/sample-exam-code/assignment3/: CMakeLists.txt  main.cpp  testing.md
Year 2/Quarter 1/Algorithm/sample-exam-code/assignment4/: CMakeLists.txt  main.cpp  testing.md
Year 2/Quarter 1/Algorithm/sample-exam-code/include/: bintree.h  edge.h
Year 2/Quarter 1/Algorithm/week1-code/: CMakeLists.txt  README.md  week1-570135.html  week1-570135.md
Year 2/Quarter 1/Algorithm/week1-code/first_occurrence/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week1-code/include/: utils.h
Year 2/Quarter 1/Algorithm/week1-code/intersect_sets/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week1-code/partition_array/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week1-code/scripts/: test_target.py
Year 2/Quarter 1/Algorithm/week1-code/sorted_arrays/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week1-code/subtract_sets/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week1-code/subtract_sets_inplace/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week2-code/: CMakeLists.txt  Example.md  week2.md
Year 2/Quarter 1/Algorithm/week2-code/anagrams/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week2-code/include/: linked_list.h
Year 2/Quarter 1/Algorithm/week2-code/list_insertions/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week2-code/list_partitioning/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week2-code/list_reverse/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week2-code/list_union/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week2-code/scripts/: test_target.py
Year 2/Quarter 1/Algorithm/week2-code/subarray_sum/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week2-code/unsafe_buffer/: CMakeLists.txt  main.cpp
Year 2/Quarter 1/Algorithm/week3-code/: CMakeLists.txt  Example.md
Year 2/Quarter 1/Algorithm/week3-code/data/: short.txt  strip.py  very_long.txt  very_short.txt
Year 2/Quarter 1/Algorithm/week4-code/: CMakeLists.txt  Example.md
Year 2/Quarter 1/Algorithm/week4-code/include/: utils.h  (+2 more)
Year 2/Quarter 1/Algorithm/week5-code/: CMakeLists.txt  Example.md  README.md
Year 2/Quarter 1/Algorithm/week6-code/: CMakeLists.txt  Example.md
Year 2/Quarter 1/Algorithm/week7-code/: CMakeLists.txt  Example.md
Year 2/Quarter 2/Advanced Programming Concept/assignment_01/: CMakeLists.txt  main.cpp
Year 2/Quarter 2/Advanced Programming Concept/assignment_02/: CMakeLists.txt  README.md  a.out  main.cpp
Year 2/Quarter 2/Machine Learning/assignment_01/: CMakeLists.txt  README.md  main.cpp
(+1796 files in other folders)
