cmake_minimum_required(VERSION 3.20)
project(activity1)

# The functions library
add_subdirectory(functions)

# Executables for all activities
add_subdirectory(activity1)
add_subdirectory(activity2)
add_subdirectory(activity3)
add_subdirectory(activity4)
add_subdirectory(activity5)
add_subdirectory(activity6)
add_subdirectory(activity7)
