cmake_minimum_required(VERSION 3.20)
project(activity1)

# The functions library
add_subdirectory(functions)

# Executables for all activities

# You can exclude an assignment by putting a # in front of the add_subdirectory for that assignment, like this:
#   add_subdirectory(assignment1)

add_subdirectory(assignment1)
add_subdirectory(assignment2)
add_subdirectory(assignment3)
